# unfold

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  release-plz.toml  sample.json
.github/workflows/: release-please.yml  release-plz.yml  release.yml  rust.yml
assets/: generate_icon.py  icon-philosophy.md  icon.icns
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  IMPLEMENTATION.md  LEARNING_PATH.md  MODULARITY.md  PROJECT_SPEC.md  QUICK_REFERENCE.md  ROADMAP.md  TESTING_GUIDE.md
scripts/: ensure_macos_document_types.sh
src/: config.rs  flat_row.rs  json_export.rs  macos_open.rs  main.rs  menu.rs  message.rs  parse_error.rs  search.rs  theme.rs  update_check.rs
src/parser/: builder.rs  mod.rs  node.rs  tree.rs
