[package]
name = "unfold"
version = "1.1.1"
edition = "2024"
description = "A high-performance JSON viewer"
authors = ["Mauricio Mercado"]
license = "MIT"
publish = false  # This is a GUI app, not a library

[dependencies]
iced = { version = "0.14.0", features = ["tokio", "advanced"] }
rfd = "0.16.0"
regex = "1.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
muda = "0.17"
reqwest = { version = "0.12", features = ["json"] }
semver = "1.0"
dirs = "6.0"

[package.metadata.bundle]
name = "Unfold"
identifier = "com.codigo.unfold"
icon = ["assets/icon.icns"]
version = "1.1.1"
short_description = "A high-performance JSON viewer"
long_description = "Unfold is a fast, native JSON viewer built in Rust. Features include syntax highlighting, search with regex support, keyboard shortcuts, and efficient handling of large files."
category = "Developer Tool"
copyright = "Copyright (c) 2025 Mauricio Mercado"
